force-app/main/default/objects/PostCodeObjects__c/PostCodeObjects__c.object-meta.xml
<CustomObject>
    <description>Object created to set an object related to a Postal Code</description>
    <label>Post Code Object</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Serial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Code Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>