force-app/main/default/objects/PostCodeObjects__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Any text helping understanding the element</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>