force-app/main/default/objects/PostCodeObjects__c/fields/objectId__c.field-meta.xml
<CustomField>
    <fullName>objectId__c</fullName>
    <description>Salesforce Id of the object related</description>
    <label>objectId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>