force-app/main/default/objects/PostCodeObjects__c/fields/objectType__c.field-meta.xml
<CustomField>
    <fullName>objectType__c</fullName>
    <label>objectType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSTALLER</fullName>
                <default>true</default>
                <label>INSTALLER</label>
            </value>
            <value>
                <fullName>SALES_ORG</fullName>
                <label>SALES ORG</label>
            </value>
            <value>
                <fullName>SALES_OFFICE</fullName>
                <label>SALES OFFICE</label>
            </value>
            <value>
                <fullName>OWNER_USA</fullName>
                <label>OWNER USA</label>
            </value>
            <value>
                <fullName>MBK-EUR</fullName>
                <label>MATERIAL BANK (EUR)</label>
            </value>
            <value>
                <fullName>PORSAMARKET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>