force-app/main/default/objects/PostCodeObjects__c/fields/postCode__c.field-meta.xml
<CustomField>
    <fullName>postCode__c</fullName>
    <label>postCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>