force-app/main/default/objects/PostCodeObjects__c/fields/PostCodeTo__c.field-meta.xml
<CustomField>
    <fullName>PostCodeTo__c</fullName>
    <description>End of the range of post codes</description>
    <label>PostCode To</label>
    <length>200</length>
    <type>Text</type>
</CustomField>