force-app/main/default/objects/PostCodeObjects__c/fields/ProductLine__c.field-meta.xml
<CustomField>
    <fullName>ProductLine__c</fullName>
    <description>Para USA: se almacenan gamas de productos.</description>
    <inlineHelpText>Opciones aceptadas:
KRION
FAÇADE
KITCHEN</inlineHelpText>
    <label>Product Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>