force-app/main/default/objects/PostCodeObjects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>country__c</columns>
    <columns>State__c</columns>
    <columns>postCode__c</columns>
    <columns>PostCodeTo__c</columns>
    <columns>ProductLine__c</columns>
    <columns>Profile__c</columns>
    <columns>objectId__c</columns>
    <columns>objectType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>