force-app/main/default/objects/PostCodeObjects__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>country__c</columns>
    <columns>State__c</columns>
    <columns>postCode__c</columns>
    <columns>PostCodeTo__c</columns>
    <columns>ProductLine__c</columns>
    <columns>Profile__c</columns>
    <columns>objectId__c</columns>
    <columns>Comments__c</columns>
    <columns>objectType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>objectType__c</field>
        <operation>equals</operation>
        <value>MBK-EUR</value>
    </filters>
    <label>Material Bank EUR</label>
</ListView>